# ChangeLog for dev-python/benchmarker
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Jul 2011; James Rowe <jnrowe@gmail.com> benchmarker-3.0.1.ebuild:
  QA: Minor quoting fixes.

  21 Mar 2011; James Rowe <jnrowe@gmail.com> -benchmarker-2.0.0.ebuild,
  benchmarker-3.0.1.ebuild:
  Keyworded x86.

  21 Mar 2011; James Rowe <jnrowe@gmail.com> benchmarker-3.0.1.ebuild:
  Keyworded amd64.

  04 Mar 2011; James Rowe <jnrowe@gmail.com> benchmarker-3.0.1.ebuild:
  Don't test pre-installed package in src_test.

  04 Mar 2011; James Rowe <jnrowe@gmail.com> benchmarker-2.0.0.ebuild,
  benchmarker-3.0.1.ebuild:
  Make use of jnrowe-pypi S mangling.

  04 Mar 2011; James Rowe <jnrowe@gmail.com> benchmarker-2.0.0.ebuild,
  benchmarker-3.0.1.ebuild:
  Make use of jnrowe-pypi S mangling.

*benchmarker-3.0.1 (15 Feb 2011)

  15 Feb 2011; James Rowe <jnrowe@gmail.com> +benchmarker-3.0.1.ebuild:
  Version bump [272].

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  10 Dec 2010; James Rowe <jnrowe@gmail.com> -benchmarker-1.1.0.ebuild,
  benchmarker-2.0.0.ebuild:
  Keyworded x86.

  10 Dec 2010; James Rowe <jnrowe@gmail.com> benchmarker-2.0.0.ebuild:
  Keyworded amd64.

*benchmarker-2.0.0 (07 Nov 2010)

  07 Nov 2010; James Rowe <jnrowe@gmail.com> +benchmarker-2.0.0.ebuild:
  Version bump [225].

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

  08 Aug 2010; James Rowe <jnrowe@gmail.com> -benchmarker-1.0.0.ebuild,
  benchmarker-1.1.0.ebuild:
  Keyworded x86.

  08 Aug 2010; James Rowe <jnrowe@gmail.com> benchmarker-1.1.0.ebuild:
  Keyworded amd64.

*benchmarker-1.1.0 (08 Jul 2010)

  08 Jul 2010; James Rowe <jnrowe@gmail.com> +benchmarker-1.1.0.ebuild:
  Version bump [077].

  18 Jun 2010; James Rowe <jnrowe@gmail.com> benchmarker-1.0.0.ebuild:
  Keyworded x86.

  17 Jun 2010; James Rowe <jnrowe@gmail.com> benchmarker-1.0.0.ebuild:
  Keyworded amd64.
