@@ -2,14 +2,14 @@
 Hash: SHA512
 
 DIST Benchmarker-3.0.1.tar.gz 36796 RMD160 76d36952bc1be609c197ba5d09c08a5cc83899f8 SHA1 ca358e304b0967a8a47d55481cb317176e119036 SHA256 1e1b072bf07d610644acfae8ed243b1edfa2a94221ad5521009e2124378c9c52
-EBUILD benchmarker-3.0.1.ebuild 828 RMD160 826c40f17d9f3b311174651159b70c18615cef0d SHA1 102f914b79227a5ddbd42e6129458053eeac64d7 SHA256 80a6e3d34b549bc8f1ad8e6e2845ad165882e38aa3b2bead9a234e0877ae644b
-MISC ChangeLog 2236 RMD160 3ba2881ae2aa3c83702e37a639203c7b2dd12d25 SHA1 980d80c13a3693128db1446c7f5558845c5d4eff SHA256 b638b7d83aeb5d98a916a1369541c074f09096c50d2bc64b0eb99f7eb8ef20f1
+EBUILD benchmarker-3.0.1.ebuild 796 RMD160 7eac007011ad1e67a3a1b835c618d0027e89ad76 SHA1 9b014d0b1de6eddbd6ffaf79b0707e138a01b0b0 SHA256 8cb79fbf2c6795dfbce57f21f564ed8686743ae6463694a72ea3be9fc535b790
+MISC ChangeLog 2358 RMD160 60adb5e82cb104832d71a76ec341dcb928cdb381 SHA1 874c8a35418dc55e8d1ecc7b6e2a9791fc37e147 SHA256 dfea37fc4c385148dc0d3d8d86781043bc6405c35de7c308cc3f6d23cb11f61e
 MISC metadata.xml 424 RMD160 9eb1ec987ec7be6e6e47c179ef1078e516c60834 SHA1 a88efc86b1e775c61ab5e61a001839586ccc81a5 SHA256 e22ed06e527f1104da0725835306ddd53b59033d797c5219fc8914877308d685
 MISC watch 26 RMD160 1f24eb78130a48142332aec933b9348cab666d59 SHA1 d1799d049770134a596925c81470f3b5a4add777 SHA256 0243d29e9f8c724d980dd213982e6a80d37815408775f9b79d3b9870c53403ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk4mwhMACgkQzJrj3cAXR0lpaQCdH2wnHT1zIxPe8N7KqUWGqEOu
-b+sAoKj6KbbOm3xL67Z9zQYCU0GG3Rjf
-=a8Ka
+iEYEAREKAAYFAk5be4AACgkQzJrj3cAXR0kimACfax1v7HaVbN9dB9iILDG9PDPK
+r18AmgOy/HfD8avOYUtkNeGGjVF4zkbt
+=FpMP
 -----END PGP SIGNATURE-----
