@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  29 Aug 2011; James Rowe <jnrowe@gmail.com> benchmarker-3.0.1.ebuild:
+  Switched to using PYTHON_TESTS_RESTRICTED_ABIS.
+
   20 Jul 2011; James Rowe <jnrowe@gmail.com> benchmarker-3.0.1.ebuild:
   QA: Minor quoting fixes.
 
